--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="hover-overlay">
                         <div class="text-center hover-inner">
                             <h3> Flowers </h3>
-                            <p> We Love Them </p>
+                            <p> </p>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                     <div class="hover-overlay">
                         <div class="text-center hover-inner">
                             <h3> Stairs </h3>
-                            <p> You Need Them </p>
+                            <p> </p>
                         </div>
                     </div>
                 </div>
@@ -114,8 +114,8 @@
                 <div class="border hover-container border-stone-900" style="background-image:url('/images/minimal-4.jpg')">
                     <div class="hover-overlay">
                         <div class="text-center hover-inner">
-                            <h3> Hair </h3>
-                            <p> Wish I Had It </p>
+                            <h3> Woman </h3>
+                            <p> </p>
                         </div>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                     <div class="hover-overlay">
                         <div class="text-center hover-inner">
                             <h3> Flowers </h3>
-                            <p> We Love Them </p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                     <div class="hover-overlay">
                         <div class="text-center hover-inner">
                             <h3> Stairs </h3>
-                            <p> You Need Them </p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                     <div class="hover-overlay">
                         <div class="text-center hover-inner">
                             <h3> Hair </h3>
-                            <p> Wish I Had It </p>
+                            <p> </p>
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                     <div class="hover-overlay">
                         <div class="text-center hover-inner">
                             <h3> Stairs </h3>
-                            <p> Go up or down </p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                     <div class="hover-overlay">
                         <div class="text-center hover-inner">
                             <h3> Lamp </h3>
-                            <p> Makes things bright </p>
+                            <p> </p>
                         </div>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                     <div class="hover-overlay">
                         <div class="text-center hover-inner">
                             <h3> Secret Stair </h3>
-                            <p> Where does it go</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
