--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <title>IOC Project 1</title>
+    <title>PureSpace Design</title>
 </head>
 
 <body class="bg-sand">
@@ -32,19 +32,19 @@
     <header class="bg-no-repeat bg-cover bg-header_image aspect-video">
         <div class="flex justify-around px-8 py-4 border-b-2 border-b-amber-800 text-amber-800">
             <nav class="max-sm:hidden">
-                <a href="#"> Nav 1 </a>
-                <a href="#"> Nav 2 </a>
-                <a href="#"> Nav 3 </a>
+                <a href="#"> About Us </a>
+                <a href="#"> Services </a>
+                <a href="#"> Portfolio </a>
             </nav>
             <div class="text-center">
                 <a href="/">
-                    <h2 class="text-xl text-white logo md:text-3xl"> LOGO </h2>
+                    <h2 class="text-xl text-white logo md:text-3xl"> PureSpace Design </h2>
                 </a>
             </div>
             <nav class="max-sm:hidden">
-                <a href="#"> Nav 4 </a>
-                <a href="#"> Nav 5 </a>
-                <a href="#"> Nav 6 </a>
+                <a href="#"> Blog </a>
+                <a href="#"> FAQ </a>
+                <a href="#"> Contact </a>
             </nav>
             <nav class="sm:hidden hamburger-button">
                 <div class="space-y-2 ">
@@ -56,19 +56,19 @@
         </div>
         <div class="flex flex-col text-center items-center text-white p-[10%]">
             <hr class="w-52">
-            <h2 class="p-8 uppercase text-7xl font-display"> This this a heading </h2>
-            <h3 class="font-sans not-bold"> This is a sub-heading </h3>
+            <h2 class="p-8 uppercase text-7xl font-display"> Interior Design </h2>
+            <h3 class="font-sans not-bold"> A sense of purity and simplicity </h3>
         </div>
     </header>
 
     <div class="mobile-menu"> 
         <nav> 
-            <a href="/"> Nav One </a>
-            <a href="/"> Nav Two </a>
-            <a href="/"> Nav Three </a>
-            <a href="/"> Nav Four </a>
-            <a href="/"> Nav Five </a>
-            <a href="/"> Nav Six </a>
+            <a href="/"> About Us </a>
+            <a href="/"> Services </a>
+            <a href="/"> Portfolio </a>
+            <a href="/"> Blog </a>
+            <a href="/"> FAQ </a>
+            <a href="/"> Contact </a>
         </nav>
     </div>
 
